--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "angular-9-datatable": "^0.1.1",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.2.3",
     "ngx-fb": "^1.0.1",
     "ngx-toastr": "^14.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "print-js": "^1.6.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
